--- a/tutorial_speech.ipynb
+++ b/tutorial_speech.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "257c6c98",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "openmic",
    "language": "python",
    "name": "python3"
   },
